GSAPPED the nav drop down on mobile

--- a/index.html
+++ b/index.html
@@ -50,13 +50,37 @@
         </div>
 
         <nav>
-          <ul class="flex flex-row justify-around">
-            <li><a class="text-white" href="#body">Home</a></li>
-            <li><a class="text-white" href="#how-it-works">How it works</a></li>
-            <li><a class="text-white" href="#features">features</a></li>
-            <li><a class="text-white" href="#about us">about us</a></li>
-            <li><a class="text-white" href="#reviews">reviews</a></li>
-            <li><a class="text-white" href="#contact">contact</a></li>
+          <ul class="flex flex-col justify-center align-center">
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#body">Home</a>
+              </span>
+            </li>
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#how-it-works">How it works</a>
+              </span>
+            </li>
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#features">features</a>
+              </span>
+            </li>
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#about us">about us</a>
+              </span>
+            </li>
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#reviews">reviews</a>
+              </span>
+            </li>
+            <li>
+              <span class="nav-item-overlay">
+                <a class="text-white" href="#contact">contact</a>
+              </span>
+            </li>
           </ul>
         </nav>
       </div>
