--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </div>
 
         <nav>
-          <ul class="flex flex-col justify-center align-center">
+          <ul
+            class="flex flex-col flex-md-row justify-center justify-md-around align-center"
+          >
             <li>
               <span class="nav-item-overlay">
                 <a class="text-white" href="#body">Home</a>
@@ -86,67 +88,95 @@
       </div>
     </div>
 
-    <header class="flex flex-col justify-center align-center">
-      <div class="header-text container text-center">
-        <img src="./assets/imgs/branding/UKRI logo.webp" alt="UKRI Logo" />
+    <header>
+      <div
+        class="container flex flex-col flex-md-row justify-center align-center"
+      >
+        <div class="header-text container text-center text-md-start mt-0">
+          <img
+            class="landing-img"
+            src="./assets/imgs/branding/UKRI logo.webp"
+            alt="UKRI Logo"
+          />
 
-        <h1 class="text-white">
-          <span class="underline">Discreet</span> home Monitoring for
-          <strong><span class="underline">independent</span></strong> living
-        </h1>
+          <h1 class="text-white landing-text">
+            <span class="underline">Discreet</span> home Monitoring for
+            <strong><span class="underline">independent</span></strong> living
+          </h1>
 
-        <h3 class="text-white">Helps to keep loved ones in their own home</h3>
+          <h3 class="text-white landing-text mt-2">
+            Helps to keep loved ones in their own home
+          </h3>
 
-        <div class="launch-demo-container text-center">
-          <p class="text-white">Try it yourself</p>
+          <div
+            class="app-container flex flex-col flex-md-row align-center mt-2 justify-center mx-auto mx-md-0"
+          >
+            <div class="launch-demo-container text-center">
+              <p class="text-white landing-cta">
+                Try it yourself with our interactive demo
+              </p>
 
-          <div class="launch-demo mx-auto mt-2">
-            <p>Launch Demo Site</p>
+              <div class="launch-demo mx-auto mt-2 landing-cta">
+                <p>Launch Demo Site</p>
+              </div>
+
+              <ul class="text-start text-white mt-2">
+                <li><strong>Username:</strong> user@example.com</li>
+                <li><strong>Password:</strong> demo123</li>
+              </ul>
+            </div>
+
+            <div
+              class="flex flex-col justify-center app-store-container mx-auto mt-2"
+            >
+              <p class="text-white">
+                Availble on all Google Play and the Apple store
+              </p>
+              <div class="flex flex-row">
+                <img
+                  src="./assets/imgs/cta/apple-store.webp"
+                  alt="download from the Apple store"
+                  class="app-image mr-2"
+                />
+                <img
+                  src="./assets/imgs/cta/g-play-store.webp"
+                  alt="download from the Google Play Store"
+                  class="app-image"
+                />
+              </div>
+            </div>
           </div>
         </div>
 
-        <div
-          class="app-container flex flex-col align-center justify-center mx-auto"
-        >
-          <img
-            src="./assets/imgs/cta/apple-store.webp"
-            alt="download from the Apple store"
-          />
-          <img
-            src="./assets/imgs/cta/g-play-store.webp"
-            alt="download from the Google Play Store"
-          />
-        </div>
-      </div>
-
-      <div class="container">
-        <div class="header-splash mt-2">
-          <img
-            class="splash-potrait-view"
-            src="./assets/imgs/promo/potraitwebp.webp"
-            alt=""
-          />
-          <img
-            class="splash-landscape-view"
-            src="./assets/imgs/promo/landscape.webp"
-            alt=""
-          />
-          <div class="splash-convo">
+        <div class="container splash-container mt-2 mt-md-0">
+          <div class="header-splash mt-2 mt-md-0">
             <img
-              class="alan-potrait"
-              src="./assets/imgs/promo/alan-potrait.webp"
+              class="splash-potrait-view"
+              src="./assets/imgs/promo/potraitwebp.webp"
               alt=""
             />
             <img
-              class="splash-message"
-              src="./assets/imgs/promo/message-1.webp"
+              class="splash-landscape-view"
+              src="./assets/imgs/promo/landscape.webp"
               alt=""
             />
-            <img
-              class="splash-message"
-              src="./assets/imgs/promo/message-2.webp"
-              alt=""
-            />
+            <div class="splash-convo">
+              <img
+                class="alan-potrait"
+                src="./assets/imgs/promo/alan-potrait.webp"
+                alt=""
+              />
+              <img
+                class="splash-message"
+                src="./assets/imgs/promo/message-1.webp"
+                alt=""
+              />
+              <img
+                class="splash-message"
+                src="./assets/imgs/promo/message-2.webp"
+                alt=""
+              />
+            </div>
           </div>
         </div>
       </div>
